--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,7 @@ artifacts/*.txt
 !artifacts/cnn_instrument_classifier.pth
 
 
-
-
+__pycache__/
 
 
 *.DS_Storeartifacts/cnn_instrument_classifier.pth
